# nugie-vulkan

./: .gitignore  .gitmodules  CMakeLists.txt
CMake/: CommonMacros.txt
src/: Bistro.h  Grid.frag  Grid.vert  SceneUtils.h  Skybox.h  VKMesh08.h  VKMesh11.h  VKMesh11Lazy.h  common.sp  common_directional_shadow.sp  common_scene_graph.sp  main.cpp  main.frag  main.vert  oit.frag  opaque.frag  scene_graph.frag  scene_graph.vert  shadow.frag  shadow.vert  transparent.frag
src/shaders/: common.sp  main.frag  main.slang  main.vert
src/shaders/cubemap/: common.sp  skybox.frag  skybox.vert
src/shaders/culling/: FrustumCulling.comp
src/shaders/directional_shadow/: common.sp  main.frag  main.vert  shadow.frag  shadow.vert
src/shaders/gltf/: PBR.sp  animation.comp  common.sp  inputs.frag  inputs.vert  main.frag  main.vert
src/shaders/grid/: Grid.frag  Grid.vert
src/shaders/hdr/: Adaptation.comp  Bloom.comp  BrightPass.comp  ToneMap.frag
src/shaders/ibl/: SSAO.comp  combine.frag
src/shaders/oit/: common.sp  common_oit.sp  oit.frag  opaque.frag  transparent.frag
src/shaders/scenegraph/: common.sp  main.frag  main.vert
src/shaders/util/: AlphaTest.sp  Blur.comp  QuadFlip.vert  Shadow.sp
src/shared/: Bitmap.h  Camera.h  Graph.h  HelpersGLFW.cpp  HelpersGLFW.h  LineCanvas.cpp  LineCanvas.h  SkeletalMesh.cpp  SkeletalMesh.h  Tonemap.h  Trackball.h  Utils.cpp  Utils.h  UtilsAnim.cpp  UtilsAnim.h  UtilsCubemap.cpp  UtilsCubemap.h  UtilsFPS.h  UtilsGLTF.cpp  UtilsGLTF.h  UtilsMath.h  VulkanApp.cpp  VulkanApp.h
src/shared/Camera/: Camera.h  CameraFirstPerson.cpp  (+4 more)
(+20 files in other folders)
